fix spacing issue on mobile

--- a/public/css/global.css
+++ b/public/css/global.css
@@ -46,9 +46,9 @@ main
     background-color: var(--main-background);
     border-radius: 5px;
     display: block;
-    margin: 32px auto;
-    padding: 16px;
-    max-width: 800px;
+    margin: 2em auto;
+    padding: 0.5em 1em;
+    max-width: calc(800px - 2em);
 }
 
 /* Text Formatting Styles */
@@ -156,4 +156,13 @@ thead th
 tbody tr:nth-child(odd)
 {
     background-color: var(--accent-bg);
+}
+
+/* Mobile Styles */
+@media screen and (max-width: 800px)
+{
+    main
+    {
+        padding-top: 1.5em;
+    }
 }
